Almost forgot - updated documentation for 0.44.

--- a/pages/code/asdocs/all-index-C.html
+++ b/pages/code/asdocs/all-index-C.html
@@ -544,7 +544,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("CÂ
 </tr>
 <tr>
 <td width="20"></td><td>
-     Marks this player as having achieved a task.</td>
+     This method calculates and awards a coin payout for the player.</td>
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/package-detail.html">com.threerings.flash</a> &mdash; Package</td>
