--- a/pages/code/asdocs/all-index-S.html
+++ b/pages/code/asdocs/all-index-S.html
@@ -201,6 +201,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("SÂ
      resulting in a SIGNAL_RECEIVED event.</td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/avrg/class-list.html');" href="com/whirled/avrg/RoomSubControlServer.html#sendSignal()">sendSignal</a>(name, value) &mdash; Method in class com.whirled.avrg.<a onclick="javascript:loadClassListFrame('com/whirled/avrg/class-list.html');" href="com/whirled/avrg/RoomSubControlServer.html">RoomSubControlServer</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+     Sends a signal to all instances of all entities in the room.</td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/game/class-list.html');" href="com/whirled/game/GameSubControl.html#SERVER_AGENT_ID">SERVER_AGENT_ID</a> &mdash; Constant static property in class com.whirled.game.<a onclick="javascript:loadClassListFrame('com/whirled/game/class-list.html');" href="com/whirled/game/GameSubControl.html">GameSubControl</a></td>
 </tr>
 <tr>
@@ -746,10 +753,24 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("SÂ
  Dispatched when any instance sends a message to all instances of all entities.</td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/avrg/class-list.html');" href="com/whirled/avrg/RoomSubControlBase.html#event:signalReceived">signalReceived</a> &mdash; Event in class com.whirled.avrg.<a onclick="javascript:loadClassListFrame('com/whirled/avrg/class-list.html');" href="com/whirled/avrg/RoomSubControlBase.html">RoomSubControlBase</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+ Dispatched when a signal has been received in this room.</td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/class-list.html');" href="com/whirled/ControlEvent.html#SIGNAL_RECEIVED">SIGNAL_RECEIVED</a> &mdash; Constant static property in class com.whirled.<a onclick="javascript:loadClassListFrame('com/whirled/class-list.html');" href="com/whirled/ControlEvent.html">ControlEvent</a></td>
 </tr>
 <tr>
 <td width="20"></td><td> An event type dispatched when a signal is received.</td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/avrg/class-list.html');" href="com/whirled/avrg/AVRGameRoomEvent.html#SIGNAL_RECEIVED">SIGNAL_RECEIVED</a> &mdash; Constant static property in class com.whirled.avrg.<a onclick="javascript:loadClassListFrame('com/whirled/avrg/class-list.html');" href="com/whirled/avrg/AVRGameRoomEvent.html">AVRGameRoomEvent</a></td>
+</tr>
+<tr>
+<td width="20"></td><td>
+     An event type dispatched when a signal has been received in this room.</td>
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/Vector2.html#similar()">similar</a>(v:<a href="com/threerings/flash/Vector2.html" onclick="javascript:loadClassListFrame('com/threerings/flash./class-list.html');">com.threerings.flash:Vector2</a>, epsilon) &mdash; Method in class com.threerings.flash.<a onclick="javascript:loadClassListFrame('com/threerings/flash/class-list.html');" href="com/threerings/flash/Vector2.html">Vector2</a></td>
