--- a/pages/code/asdocs/com/whirled/avrg/PlayerSubControlClient.html
+++ b/pages/code/asdocs/com/whirled/avrg/PlayerSubControlClient.html
@@ -104,7 +104,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <div class="summarySignature">
 <a class="signatureLink" href="PlayerSubControlBase.html#completeTask()">completeTask</a>(taskId:String, payout:Number):void</div>
 <div class="summaryTableDescription">
-     Marks this player as having achieved a task.</div>
+     This method calculates and awards a coin payout for the player.</div>
 </td><td class="summaryTableOwnerCol"><a href="PlayerSubControlBase.html">PlayerSubControlBase</a></td>
 </tr>
 <tr class="hideInheritedMethod">
