--- a/pages/code/asdocs/com/whirled/avrg/RoomSubControlClient.html
+++ b/pages/code/asdocs/com/whirled/avrg/RoomSubControlClient.html
@@ -257,6 +257,14 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="hideInheritedEvent">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
+<a class="signatureLink" href="RoomSubControlBase.html#event:signalReceived">signalReceived</a>
+</div>
+</td><td class="summaryTableDescription summaryTableCol">
+ Dispatched when a signal has been received in this room.</td><td class="summaryTableOwnerCol"><a href="RoomSubControlBase.html">RoomSubControlBase</a></td>
+</tr>
+<tr class="hideInheritedEvent">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
 <a class="signatureLink" href="../AbstractControl.html#event:unload">unload</a>
 </div>
 </td><td class="summaryTableDescription summaryTableCol">
