--- a/pages/code/contrib/asdocs/all-classes.html
+++ b/pages/code/contrib/asdocs/all-classes.html
@@ -262,6 +262,9 @@
 <td><a href="com/whirled/contrib/platformer/editor/DynamicDetailInterface.html"><i>DynamicDetailInterface</i></a></td>
 </tr>
 <tr>
+<td><a href="com/whirled/contrib/platformer/net/DynamicMessage.html">DynamicMessage</a></td>
+</tr>
+<tr>
 <td><a href="com/whirled/contrib/platformer/editor/DynamicSelector.html">DynamicSelector</a></td>
 </tr>
 <tr>
@@ -610,6 +613,9 @@
 <td><a href="com/whirled/contrib/PreferredCamera.html">PreferredCamera</a></td>
 </tr>
 <tr>
+<td><a href="com/whirled/contrib/platformer/net/QueueMessage.html">QueueMessage</a></td>
+</tr>
+<tr>
 <td><a href="com/whirled/contrib/simplegame/util/Rand.html">Rand</a></td>
 </tr>
 <tr>
@@ -787,6 +793,9 @@
 <td><a href="com/whirled/contrib/platformer/editor/TextDetail.html">TextDetail</a></td>
 </tr>
 <tr>
+<td><a href="com/whirled/contrib/platformer/net/ThrottlingMessageManager.html">ThrottlingMessageManager</a></td>
+</tr>
+<tr>
 <td><a href="com/whirled/contrib/platformer/game/TickController.html"><i>TickController</i></a></td>
 </tr>
 <tr>
@@ -848,6 +857,9 @@
 </tr>
 <tr>
 <td><a href="com/whirled/contrib/card/trick/WinnersAndLosers.html">WinnersAndLosers</a></td>
+</tr>
+<tr>
+<td><a href="com/whirled/contrib/platformer/net/WrapperMessage.html">WrapperMessage</a></td>
 </tr>
 <tr>
 <td><a href="com/whirled/contrib/platformer/editor/air/file/XmlFile.html">XmlFile</a></td>
