--- a/pages/code/contrib/asdocs/all-index-M.html
+++ b/pages/code/contrib/asdocs/all-index-M.html
@@ -421,6 +421,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("MÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/net/class-list.html');" href="com/whirled/contrib/platformer/net/WrapperMessage.html#messageName">messageName</a> &mdash; Property in class com.whirled.contrib.platformer.net.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/net/class-list.html');" href="com/whirled/contrib/platformer/net/WrapperMessage.html">WrapperMessage</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/oneroom/class-list.html');" href="com/whirled/contrib/avrg/oneroom/OneRoomGameRoom.html#messageReceived()">messageReceived</a>(senderId, name, value) &mdash; Method in class com.whirled.contrib.avrg.oneroom.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/avrg/oneroom/class-list.html');" href="com/whirled/contrib/avrg/oneroom/OneRoomGameRoom.html">OneRoomGameRoom</a></td>
 </tr>
 <tr>
@@ -949,6 +955,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("MÂ
 </tr>
 <tr>
 <td width="20"></td><td> The message name we're using.</td>
+</tr>
+<tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/net/class-list.html');" href="com/whirled/contrib/platformer/net/QueueMessage.html#msgs">msgs</a> &mdash; Property in class com.whirled.contrib.platformer.net.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/net/class-list.html');" href="com/whirled/contrib/platformer/net/QueueMessage.html">QueueMessage</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
 </tr>
 <tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/card/class-list.html');" href="com/whirled/contrib/card/TurnTimer.html#MSG_START">MSG_START</a> &mdash; Constant static property in class com.whirled.contrib.card.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/card/class-list.html');" href="com/whirled/contrib/card/TurnTimer.html">TurnTimer</a></td>
