--- a/pages/code/contrib/asdocs/all-index-O.html
+++ b/pages/code/contrib/asdocs/all-index-O.html
@@ -365,6 +365,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("OÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/net/class-list.html');" href="com/whirled/contrib/platformer/net/ThrottlingMessageManager.html#onTimer()">onTimer</a>(... rest) &mdash; Method in class com.whirled.contrib.platformer.net.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/net/class-list.html');" href="com/whirled/contrib/platformer/net/ThrottlingMessageManager.html">ThrottlingMessageManager</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/editor/air/class-list.html');" href="com/whirled/contrib/platformer/editor/air/LightweightCenteredDialog.html#open()">open</a>(openWindowActive) &mdash; Method in class com.whirled.contrib.platformer.editor.air.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/editor/air/class-list.html');" href="com/whirled/contrib/platformer/editor/air/LightweightCenteredDialog.html">LightweightCenteredDialog</a></td>
 </tr>
 <tr>
