--- a/pages/code/contrib/asdocs/all-index-R.html
+++ b/pages/code/contrib/asdocs/all-index-R.html
@@ -247,6 +247,12 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("RÂ
 <td width="20"></td><td></td>
 </tr>
 <tr>
+<td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/net/class-list.html');" href="com/whirled/contrib/platformer/net/MessageManager.html#_rec">_rec</a> &mdash; Property in class com.whirled.contrib.platformer.net.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/platformer/net/class-list.html');" href="com/whirled/contrib/platformer/net/MessageManager.html">MessageManager</a></td>
+</tr>
+<tr>
+<td width="20"></td><td></td>
+</tr>
+<tr>
 <td colspan="2" class="idxrow"><a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/net/class-list.html');" href="com/whirled/contrib/simplegame/net/OnlineTickedMessageManager.html#_receivedFirstTick">_receivedFirstTick</a> &mdash; Property in class com.whirled.contrib.simplegame.net.<a onclick="javascript:loadClassListFrame('com/whirled/contrib/simplegame/net/class-list.html');" href="com/whirled/contrib/simplegame/net/OnlineTickedMessageManager.html">OnlineTickedMessageManager</a></td>
 </tr>
 <tr>
