--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/net/GameMessage.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/net/GameMessage.html
@@ -37,6 +37,9 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("In
 <tr>
 <td class="classHeaderTableLabel">Interface</td><td class="classSignature">public interface GameMessage</td>
 </tr>
+<tr>
+<td class="classHeaderTableLabel">Implementors</td><td><a href="../net/DynamicMessage.html">DynamicMessage</a>, <a href="../net/QueueMessage.html">QueueMessage</a>, <a href="../net/WrapperMessage.html">WrapperMessage</a></td>
+</tr>
 </table>
 <p></p>
 <p></p>
