--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/net/class-list.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/net/class-list.html
@@ -25,7 +25,19 @@
 <td><a style="color:black" href="package-detail.html#classSummary"><b>Classes</b></a></td>
 </tr>
 <tr>
+<td><a href="DynamicMessage.html">DynamicMessage</a></td>
+</tr>
+<tr>
 <td><a href="MessageManager.html">MessageManager</a></td>
+</tr>
+<tr>
+<td><a href="QueueMessage.html">QueueMessage</a></td>
+</tr>
+<tr>
+<td><a href="ThrottlingMessageManager.html">ThrottlingMessageManager</a></td>
+</tr>
+<tr>
+<td><a href="WrapperMessage.html">WrapperMessage</a></td>
 </tr>
 </table>
 </body>
