--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/net/package-detail.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/net/package-detail.html
@@ -49,7 +49,19 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Pa
 <th>&nbsp;</th><th width="30%">Class</th><th width="70%">Description</th>
 </tr>
 <tr class="prow1">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="DynamicMessage.html">DynamicMessage</a></td><td class="summaryTableLastCol">&nbsp;</td>
+</tr>
+<tr class="prow0">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="MessageManager.html">MessageManager</a></td><td class="summaryTableLastCol">&nbsp;</td>
+</tr>
+<tr class="prow1">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="QueueMessage.html">QueueMessage</a></td><td class="summaryTableLastCol">&nbsp;</td>
+</tr>
+<tr class="prow0">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="ThrottlingMessageManager.html">ThrottlingMessageManager</a></td><td class="summaryTableLastCol">&nbsp;</td>
+</tr>
+<tr class="prow1">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableSecondCol"><a href="WrapperMessage.html">WrapperMessage</a></td><td class="summaryTableLastCol">&nbsp;</td>
 </tr>
 </table>
 <p></p>
