--- a/pages/code/asdocs/com/threerings/util/ArrayUtil.html
+++ b/pages/code/asdocs/com/threerings/util/ArrayUtil.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../print.css" type="text/css" media="print">
-<meta content="ArrayUtil,com.threerings.util.ArrayUtil,contains,copy,copyOf,create,equals,findIf,indexIf,indexOf,removeAll,removeFirst,removeLast,shuffle,sort,stableSort" name="keywords">
+<meta content="ArrayUtil,com.threerings.util.ArrayUtil,contains,copy,copyOf,create,equals,findIf,indexIf,indexOf,removeAll,removeAllIf,removeFirst,removeFirstIf,removeLast,removeLastIf,shuffle,sort,stableSort" name="keywords">
 <title>com.threerings.util.ArrayUtil</title>
 </head>
 <body>
@@ -133,6 +133,14 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
+<a class="signatureLink" href="#removeAllIf()">removeAllIf</a>(arr:Array, pred:Function):Boolean</div>
+<div class="summaryTableDescription">[static]
+     Removes all elements in the array for which the specified predicate returns true.</div>
+</td><td class="summaryTableOwnerCol">ArrayUtil</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
 <a class="signatureLink" href="#removeFirst()">removeFirst</a>(arr:Array, element:Object):Boolean</div>
 <div class="summaryTableDescription">[static]
      Remove the first instance of the specified element from the array.</div>
@@ -141,9 +149,25 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
+<a class="signatureLink" href="#removeFirstIf()">removeFirstIf</a>(arr:Array, pred:Function):Boolean</div>
+<div class="summaryTableDescription">[static]
+     Removes the first element in the array for which the specified predicate returns true.</div>
+</td><td class="summaryTableOwnerCol">ArrayUtil</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
 <a class="signatureLink" href="#removeLast()">removeLast</a>(arr:Array, element:Object):Boolean</div>
 <div class="summaryTableDescription">[static]
      Remove the last instance of the specified element from the array.</div>
+</td><td class="summaryTableOwnerCol">ArrayUtil</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#removeLastIf()">removeLastIf</a>(arr:Array, pred:Function):Boolean</div>
+<div class="summaryTableDescription">[static]
+     Removes the last element in the array for which the specified predicate returns true.</div>
 </td><td class="summaryTableOwnerCol">ArrayUtil</td>
 </tr>
 <tr class="">
@@ -465,6 +489,37 @@ showHideInherited();
 </tr>
 </table>
 </div>
+<a name="removeAllIf()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">removeAllIf</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public static function removeAllIf(arr:Array, pred:Function):Boolean</code><p>
+     Removes all elements in the array for which the specified predicate returns true.
+          </p><span class="label">Parameters</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20px"></td><td><code><span class="label">arr</span>:Array</code> &mdash; a Function of the form: function (element : :Boolean
+          </td>
+</tr>
+<tr>
+<td class="paramSpacer">&nbsp;</td>
+</tr>
+<tr>
+<td width="20px"></td><td><code><span class="label">pred</span>:Function</code></td>
+</tr>
+</table>
+<p></p>
+<span class="label">Returns</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20"></td><td><code>Boolean</code> &mdash; true if an element was removed, false otherwise.
+     </td>
+</tr>
+</table>
+</div>
 <a name="removeFirst()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
@@ -495,6 +550,37 @@ showHideInherited();
 </tr>
 </table>
 </div>
+<a name="removeFirstIf()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">removeFirstIf</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public static function removeFirstIf(arr:Array, pred:Function):Boolean</code><p>
+     Removes the first element in the array for which the specified predicate returns true.
+          </p><span class="label">Parameters</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20px"></td><td><code><span class="label">arr</span>:Array</code> &mdash; a Function of the form: function (element : :Boolean
+          </td>
+</tr>
+<tr>
+<td class="paramSpacer">&nbsp;</td>
+</tr>
+<tr>
+<td width="20px"></td><td><code><span class="label">pred</span>:Function</code></td>
+</tr>
+</table>
+<p></p>
+<span class="label">Returns</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20"></td><td><code>Boolean</code> &mdash; true if an element was removed, false otherwise.
+     </td>
+</tr>
+</table>
+</div>
 <a name="removeLast()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
@@ -514,6 +600,37 @@ showHideInherited();
 </tr>
 <tr>
 <td width="20px"></td><td><code><span class="label">element</span>:Object</code></td>
+</tr>
+</table>
+<p></p>
+<span class="label">Returns</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20"></td><td><code>Boolean</code> &mdash; true if an element was removed, false otherwise.
+     </td>
+</tr>
+</table>
+</div>
+<a name="removeLastIf()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">removeLastIf</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public static function removeLastIf(arr:Array, pred:Function):Boolean</code><p>
+     Removes the last element in the array for which the specified predicate returns true.
+          </p><span class="label">Parameters</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20px"></td><td><code><span class="label">arr</span>:Array</code> &mdash; a Function of the form: function (element : :Boolean
+          </td>
+</tr>
+<tr>
+<td class="paramSpacer">&nbsp;</td>
+</tr>
+<tr>
+<td width="20px"></td><td><code><span class="label">pred</span>:Function</code></td>
 </tr>
 </table>
 <p></p>
