--- a/pages/code/asdocs/com/whirled/avrg/AVRGameRoomEvent.html
+++ b/pages/code/asdocs/com/whirled/avrg/AVRGameRoomEvent.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../print.css" type="text/css" media="print">
-<meta content="AVRGameRoomEvent,com.whirled.avrg.AVRGameRoomEvent,AVATAR_CHANGED,MOB_CONTROL_AVAILABLE,PLAYER_ENTERED,PLAYER_LEFT,PLAYER_MOVED,roomId,clone,toString" name="keywords">
+<meta content="AVRGameRoomEvent,com.whirled.avrg.AVRGameRoomEvent,AVATAR_CHANGED,MOB_CONTROL_AVAILABLE,PLAYER_ENTERED,PLAYER_LEFT,PLAYER_MOVED,SIGNAL_RECEIVED,roomId,clone,toString" name="keywords">
 <title>com.whirled.avrg.AVRGameRoomEvent</title>
 </head>
 <body>
@@ -175,6 +175,11 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol"><a class="signatureLink" href="AVRGameControlEvent.html#PLAYER_QUIT_GAME">PLAYER_QUIT_GAME</a> : String = "playerQuitGame"<div class="summaryTableDescription">[static]
      An event type dispatched when somebody is leaving the AVRG.</div>
 </td><td class="summaryTableOwnerCol"><a href="AVRGameControlEvent.html">AVRGameControlEvent</a></td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#SIGNAL_RECEIVED">SIGNAL_RECEIVED</a> : String = "signalReceived"<div class="summaryTableDescription">[static]
+     An event type dispatched when a signal has been received in this room.</div>
+</td><td class="summaryTableOwnerCol">AVRGameRoomEvent</td>
 </tr>
 <tr class="hideInheritedConstant">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol"><a class="signatureLink" href="AVRGameControlEvent.html#SIZE_CHANGED">SIZE_CHANGED</a> : String = "sizeChanged"<div class="summaryTableDescription">[static]
@@ -351,6 +356,24 @@ showHideInherited();
      <br/><b>name</b> - not used
      <br/><b>value :int</b> - the id of the player who moved
           </p></div>
+<a name="SIGNAL_RECEIVED"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">SIGNAL_RECEIVED</td><td class="detailHeaderType">constant</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public static const SIGNAL_RECEIVED:String = "signalReceived"</code><p>
+     An event type dispatched when a signal has been received in this room.
+     <br/><b>name</b> - The name of the signal.
+     <br/><b>value</b> - The arg sent with the signal, or null.
+     </p><p>
+<span class="label">See also</span>
+</p>
+<div class="seeAlso">
+<a href="../../whirled/EntityControl.html#sendSignal()" target="">com.whirled.EntityControl.sendSignal()</a>
+</div>
+</div>
 <br>
 <br>
 <hr>
