--- a/pages/code/asdocs/com/whirled/avrg/RoomSubControlBase.html
+++ b/pages/code/asdocs/com/whirled/avrg/RoomSubControlBase.html
@@ -219,6 +219,14 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 </td><td class="summaryTableDescription summaryTableCol">
  Dispatched when a player in this room takes up a new location.</td><td class="summaryTableOwnerCol">RoomSubControlBase</td>
 </tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#event:signalReceived">signalReceived</a>
+</div>
+</td><td class="summaryTableDescription summaryTableCol">
+ Dispatched when a signal has been received in this room.</td><td class="summaryTableOwnerCol">RoomSubControlBase</td>
+</tr>
 <tr class="hideInheritedEvent">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
@@ -472,6 +480,24 @@ showHideInherited();
      <br/><b>name</b> - not used
      <br/><b>value :int</b> - the id of the player who moved
           </p></div>
+<a name="event:signalReceived"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">signalReceived</td><td class="detailHeaderType">event&nbsp;</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<span class="label">Event object type: </span><a href="../avrg/AVRGameRoomEvent.html"><code>com.whirled.avrg.AVRGameRoomEvent</code></a>
+<br>
+<p></p><p>
+ Dispatched when a signal has been received in this room.
+ </p><p>
+<span class="label">See also</span>
+</p>
+<div class="seeAlso">
+<a href="../../whirled/EntityControl.html#sendSignal()" target="">com.whirled.EntityControl.sendSignal()</a>
+</div>
+</div>
 <br>
 <br>
 <hr>
