--- a/pages/code/asdocs/com/whirled/avrg/RoomSubControlServer.html
+++ b/pages/code/asdocs/com/whirled/avrg/RoomSubControlServer.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../print.css" type="text/css" media="print">
-<meta content="RoomSubControlServer,com.whirled.avrg.RoomSubControlServer,props,despawnMob,getMobSubControl,getRoomId,sendMessage,spawnMob" name="keywords">
+<meta content="RoomSubControlServer,com.whirled.avrg.RoomSubControlServer,props,despawnMob,getMobSubControl,getRoomId,sendMessage,sendSignal,spawnMob" name="keywords">
 <title>com.whirled.avrg.RoomSubControlServer</title>
 </head>
 <body>
@@ -209,6 +209,14 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
+<a class="signatureLink" href="#sendSignal()">sendSignal</a>(name:String, value:Object = null):void</div>
+<div class="summaryTableDescription">
+     Sends a signal to all instances of all entities in the room.</div>
+</td><td class="summaryTableOwnerCol">RoomSubControlServer</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
 <a class="signatureLink" href="#spawnMob()">spawnMob</a>(id:String, name:String, x:Number, y:Number, z:Number):void</div>
 <div class="summaryTableDescription">
      Creates a new MOB in this room.</div>
@@ -272,6 +280,14 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 </div>
 </td><td class="summaryTableDescription summaryTableCol">
  Dispatched when a player in this room takes up a new location.</td><td class="summaryTableOwnerCol"><a href="RoomSubControlBase.html">RoomSubControlBase</a></td>
+</tr>
+<tr class="hideInheritedEvent">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="RoomSubControlBase.html#event:signalReceived">signalReceived</a>
+</div>
+</td><td class="summaryTableDescription summaryTableCol">
+ Dispatched when a signal has been received in this room.</td><td class="summaryTableOwnerCol"><a href="RoomSubControlBase.html">RoomSubControlBase</a></td>
 </tr>
 <tr class="hideInheritedEvent">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol">
@@ -406,6 +422,35 @@ showHideInherited();
 </p>
 <div class="seeAlso">
 <a href="RoomSubControlClient.html#event:MsgReceived" target="">RoomSubControlClient.MsgReceived</a>
+</div>
+</div>
+<a name="sendSignal()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">sendSignal</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public function sendSignal(name:String, value:Object = null):void</code><p>
+     Sends a signal to all instances of all entities in the room. The same size restrictions as
+     EntityControl.sendSignal() apply here too.
+     </p><span class="label">Parameters</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20px"></td><td><code><span class="label">name</span>:String</code></td>
+</tr>
+<tr>
+<td class="paramSpacer">&nbsp;</td>
+</tr>
+<tr>
+<td width="20px"></td><td><code><span class="label">value</span>:Object</code> (default = <code>null</code>)<code></code></td>
+</tr>
+</table>
+<p>
+<span class="label">See also</span>
+</p>
+<div class="seeAlso">
+<a href="../../whirled/EntityControl.html#sendSignal" target="">com.whirled.EntityControl.sendSignal</a>
 </div>
 </div>
 <a name="spawnMob()"></a>
