--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/PlatformerController.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/PlatformerController.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../print.css" type="text/css" media="print">
-<meta content="PlatformerController,com.whirled.contrib.platformer.PlatformerController,addGameListeners,createBoard,createGameController,createPieceFactory,handleGameEnded,handleGameStarted,removeGameListeners,run,shutdown" name="keywords">
+<meta content="PlatformerController,com.whirled.contrib.platformer.PlatformerController,addGameListeners,createBoard,createGameController,createMessageManager,createPieceFactory,handleGameEnded,handleGameStarted,removeGameListeners,run,shutdown" name="keywords">
 <title>com.whirled.contrib.platformer.PlatformerController</title>
 </head>
 <body>
@@ -95,6 +95,14 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
 <a class="signatureLink" href="#createGameController()">createGameController</a>():<a href="game/GameController.html">GameController</a>
+</div>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">PlatformerController</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#createMessageManager()">createMessageManager</a>():<a href="net/MessageManager.html">MessageManager</a>
 </div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">PlatformerController</td>
@@ -198,6 +206,22 @@ showHideInherited();
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
 <td width="20"></td><td><code><a href="game/GameController.html">GameController</a></code></td>
+</tr>
+</table>
+</div>
+<a name="createMessageManager()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">createMessageManager</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected function createMessageManager():<a href="net/MessageManager.html">MessageManager</a></code>
+<p></p>
+<span class="label">Returns</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20"></td><td><code><a href="net/MessageManager.html">MessageManager</a></code></td>
 </tr>
 </table>
 </div>
