--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/game/GameController.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/game/GameController.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../../print.css" type="text/css" media="print">
-<meta content="GameController,com.whirled.contrib.platformer.game.GameController,MAX_TICK,_actorMap,_board,_collider,_controllers,_defaultActorClass,_defaultDynamicClass,_defaultShotClass,_dynamicMap,_events,_pause,_rdelta,_shotMap,colliderTicks,forceX,forceY,ticked,addActorClass,addController,addDynamicClass,addShotClass,genCollider,getBoard,getCollider,getController,handleActorAdded,handleDynamicAdded,handleDynamicRemoved,handlePieceLoaded,handleShotAdded,initDynamicClasses,isPaused,removeDynamic,removeDynamicController,run,setBound,setPause,tick,updateDisplay" name="keywords">
+<meta content="GameController,com.whirled.contrib.platformer.game.GameController,MAX_TICK,_actorMap,_board,_collider,_controllers,_defaultActorClass,_defaultDynamicClass,_defaultShotClass,_dynamicMap,_events,_pause,_rdelta,_shotMap,colliderTicks,forceX,forceY,ticked,addActorClass,addController,addDynamicClass,addShotClass,genCollider,getBoard,getCollider,getController,handleActorAdded,handleDynamicAdded,handleDynamicRemoved,handlePieceLoaded,handleShotAdded,initDynamicClasses,isPaused,removeDynamic,removeDynamicController,run,setBound,setPause,shutdown,tick,updateDisplay" name="keywords">
 <title>com.whirled.contrib.platformer.game.GameController</title>
 </head>
 <body>
@@ -144,7 +144,7 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
-<a class="signatureLink" href="#addController()">addController</a>(controller:Object):void</div>
+<a class="signatureLink" href="#addController()">addController</a>(controller:Object):Boolean</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">GameController</td>
 </tr>
@@ -211,6 +211,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
 <a class="signatureLink" href="#setPause()">setPause</a>(pause:Boolean):void</div>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">GameController</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#shutdown()">shutdown</a>():void</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">GameController</td>
 </tr>
@@ -521,10 +528,17 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>public function addController(controller:Object):void</code><span class="label">Parameters</span>
+<code>public function addController(controller:Object):Boolean</code><span class="label">Parameters</span>
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
 <td width="20px"></td><td><code><span class="label">controller</span>:Object</code></td>
+</tr>
+</table>
+<p></p>
+<span class="label">Returns</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20"></td><td><code>Boolean</code></td>
 </tr>
 </table>
 </div>
@@ -851,6 +865,15 @@ showHideInherited();
 <td width="20px"></td><td><code><span class="label">pause</span>:Boolean</code></td>
 </tr>
 </table>
+</div>
+<a name="shutdown()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">shutdown</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public function shutdown():void</code>
 </div>
 <a name="tick()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
