--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/net/MessageManager.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/net/MessageManager.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../../print.css" type="text/css" media="print">
-<meta content="MessageManager,com.whirled.contrib.platformer.net.MessageManager,_gameCtrl,_msgTypes,addMessageType,onMessageReceived,sendMessage" name="keywords">
+<meta content="MessageManager,com.whirled.contrib.platformer.net.MessageManager,_gameCtrl,_lastRec,_msgTypes,_rec,addMessageType,checkSend,getMessage,onMessageReceived,sendMessage,shutdown" name="keywords">
 <title>com.whirled.contrib.platformer.net.MessageManager</title>
 </head>
 <body>
@@ -40,6 +40,9 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr>
 <td class="classHeaderTableLabel">Inheritance</td><td class="inheritanceList">MessageManager <img class="inheritArrow" alt="Inheritance" title="Inheritance" src="../../../../../images/inherit-arrow.gif"> flash.events.EventDispatcher</td>
 </tr>
+<tr>
+<td class="classHeaderTableLabel">Subclasses</td><td><a href="../net/ThrottlingMessageManager.html">ThrottlingMessageManager</a></td>
+</tr>
 </table>
 <p></p>
 <p></p>
@@ -58,7 +61,15 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 </td><td class="summaryTableOwnerCol">MessageManager</td>
 </tr>
 <tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_lastRec">_lastRec</a> : int<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">MessageManager</td>
+</tr>
+<tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_msgTypes">_msgTypes</a> : HashMap<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">MessageManager</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_rec">_rec</a> : int<div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">MessageManager</td>
 </tr>
 </table>
@@ -87,7 +98,22 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
+<a class="signatureLink" href="#getMessage()">getMessage</a>(name:String, bytes:ByteArray):<a href="../net/GameMessage.html">GameMessage</a>
+</div>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">MessageManager</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
 <a class="signatureLink" href="#sendMessage()">sendMessage</a>(msg:<a href="GameMessage.html">GameMessage</a>):void</div>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">MessageManager</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#shutdown()">shutdown</a>():void</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">MessageManager</td>
 </tr>
@@ -99,6 +125,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <table id="summaryTableProtectedMethod" class="summaryTable " cellpadding="3" cellspacing="0">
 <tr>
 <th>&nbsp;</th><th colspan="2">Method</th><th class="summaryTableOwnerCol">Defined&nbsp;by</th>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#checkSend()">checkSend</a>(msg:<a href="GameMessage.html">GameMessage</a>):void</div>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">MessageManager</td>
 </tr>
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
@@ -125,6 +158,15 @@ showHideInherited();
 <div class="detailBody">
 <code>protected var _gameCtrl:GameControl</code>
 </div>
+<a name="_lastRec"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">_lastRec</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected var _lastRec:int</code>
+</div>
 <a name="_msgTypes"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
@@ -133,6 +175,15 @@ showHideInherited();
 </table>
 <div class="detailBody">
 <code>protected var _msgTypes:HashMap</code>
+</div>
+<a name="_rec"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">_rec</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected var _rec:int</code>
 </div>
 <a name="constructorDetail"></a>
 <div class="detailSectionHeader">Constructor detail</div>
@@ -166,6 +217,47 @@ showHideInherited();
 </tr>
 </table>
 </div>
+<a name="checkSend()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">checkSend</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected function checkSend(msg:<a href="GameMessage.html">GameMessage</a>):void</code><span class="label">Parameters</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20px"></td><td><code><span class="label">msg</span>:<a href="GameMessage.html">GameMessage</a></code></td>
+</tr>
+</table>
+</div>
+<a name="getMessage()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">getMessage</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public function getMessage(name:String, bytes:ByteArray):<a href="../net/GameMessage.html">GameMessage</a></code><span class="label">Parameters</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20px"></td><td><code><span class="label">name</span>:String</code></td>
+</tr>
+<tr>
+<td class="paramSpacer">&nbsp;</td>
+</tr>
+<tr>
+<td width="20px"></td><td><code><span class="label">bytes</span>:ByteArray</code></td>
+</tr>
+</table>
+<p></p>
+<span class="label">Returns</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20"></td><td><code><a href="../net/GameMessage.html">GameMessage</a></code></td>
+</tr>
+</table>
+</div>
 <a name="onMessageReceived()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
@@ -193,6 +285,15 @@ showHideInherited();
 <td width="20px"></td><td><code><span class="label">msg</span>:<a href="GameMessage.html">GameMessage</a></code></td>
 </tr>
 </table>
+</div>
+<a name="shutdown()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">shutdown</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public function shutdown():void</code>
 </div>
 <br>
 <br>
