--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/piece/Actor.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/piece/Actor.html
@@ -4,7 +4,7 @@
 <META http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" href="../../../../../style.css" type="text/css" media="screen">
 <link rel="stylesheet" href="../../../../../print.css" type="text/css" media="print">
-<meta content="Actor,com.whirled.contrib.platformer.piece.Actor,HIT_BACK,HIT_BIG,HIT_FRONT,ORIENT_LEFT,ORIENT_RIGHT,ORIENT_SHOOT_D,ORIENT_SHOOT_F,ORIENT_SHOOT_MASK,ORIENT_SHOOT_U,ORIENT_TURNING,_attached,_attachedId,_bounds,accelX,accelY,events,health,height,justShot,maxAttachable,maxWalkable,orient,projCollider,shooting,startHealth,wasHit,width,attached,attachedId,doesHit,getBounds,orientBody,orientShoot,setAttached,shouldSpawn,toString" name="keywords">
+<meta content="Actor,com.whirled.contrib.platformer.piece.Actor,HIT_BACK,HIT_BIG,HIT_FRONT,ORIENT_LEFT,ORIENT_RIGHT,ORIENT_SHOOT_D,ORIENT_SHOOT_F,ORIENT_SHOOT_MASK,ORIENT_SHOOT_U,ORIENT_TURNING,U_HEALTH,_attached,_attachedId,_bounds,_health,accelX,accelY,events,height,justShot,maxAttachable,maxWalkable,orient,projCollider,shooting,startHealth,wasHit,width,attached,attachedId,health,doesHit,fromBytes,getBounds,orientBody,orientShoot,setAttached,shouldSpawn,toBytes,toString" name="keywords">
 <title>com.whirled.contrib.platformer.piece.Actor</title>
 </head>
 <body>
@@ -139,6 +139,10 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#startHealth">startHealth</a> : Number<div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">Actor</td>
 </tr>
+<tr class="hideInheritedProperty">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol"><a class="signatureLink" href="Dynamic.html#updateState">updateState</a> : int<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol"><a href="Dynamic.html">Dynamic</a></td>
+</tr>
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#wasHit">wasHit</a> : int<div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">Actor</td>
@@ -160,6 +164,14 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <a name="protectedPropertySummary"></a>
 <div class="summarySection">
 <div class="summaryTableTitle">Protected Properties</div>
+<div class="showHideLinks">
+<div class="hideInheritedProtectedProperty" id="hideInheritedProtectedProperty">
+<a onclick="javascript:setInheritedVisible(false,'ProtectedProperty');" href="#protectedPropertySummary" class="showHideLink"><img src="../../../../../images/expanded.gif" class="showHideLinkImage"> Hide Inherited Protected Properties</a>
+</div>
+<div class="showInheritedProtectedProperty" id="showInheritedProtectedProperty">
+<a onclick="javascript:setInheritedVisible(true,'ProtectedProperty');" href="#protectedPropertySummary" class="showHideLink"><img src="../../../../../images/collapsed.gif" class="showHideLinkImage"> Show Inherited Protected Properties</a>
+</div>
+</div>
 <table id="summaryTableProtectedProperty" class="summaryTable " cellpadding="3" cellspacing="0">
 <tr>
 <th>&nbsp;</th><th colspan="2">Property</th><th class="summaryTableOwnerCol">Defined&nbsp;by</th>
@@ -177,6 +189,14 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_bounds">_bounds</a> : <a href="../piece/Rect.html">Rect</a>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">Actor</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#_health">_health</a> : Number<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">Actor</td>
+</tr>
+<tr class="hideInheritedProtectedProperty">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol"><a class="signatureLink" href="Dynamic.html#_inState">_inState</a> : int<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol"><a href="Dynamic.html">Dynamic</a></td>
 </tr>
 </table>
 </div>
@@ -219,6 +239,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
+<a class="signatureLink" href="#fromBytes()">fromBytes</a>(bytes:ByteArray):void</div>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">Actor</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
 <a class="signatureLink" href="#getBounds()">getBounds</a>():<a href="../piece/Rect.html">Rect</a>
 </div>
 <div class="summaryTableDescription"></div>
@@ -256,6 +283,13 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
 <a class="signatureLink" href="#shouldSpawn()">shouldSpawn</a>():Boolean</div>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol">Actor</td>
+</tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
+<a class="signatureLink" href="#toBytes()">toBytes</a>(bytes:ByteArray = null):ByteArray</div>
 <div class="summaryTableDescription"></div>
 </td><td class="summaryTableOwnerCol">Actor</td>
 </tr>
@@ -346,6 +380,14 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol"><a class="signatureLink" href="Dynamic.html#PLAYER">PLAYER</a> : int = 1<div class="summaryTableDescription">[static]</div>
 </td><td class="summaryTableOwnerCol"><a href="Dynamic.html">Dynamic</a></td>
 </tr>
+<tr class="">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol">&nbsp;</td><td class="summaryTableSignatureCol"><a class="signatureLink" href="#U_HEALTH">U_HEALTH</a> : int<div class="summaryTableDescription">[static]</div>
+</td><td class="summaryTableOwnerCol">Actor</td>
+</tr>
+<tr class="hideInheritedConstant">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol"><a class="signatureLink" href="Dynamic.html#U_POS">U_POS</a> : int<div class="summaryTableDescription">[static]</div>
+</td><td class="summaryTableOwnerCol"><a href="Dynamic.html">Dynamic</a></td>
+</tr>
 </table>
 </div>
 <script type="text/javascript" language="javascript">
@@ -433,6 +475,15 @@ showHideInherited();
 <div class="detailBody">
 <code>public var events:Array</code>
 </div>
+<a name="_health"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">_health</td><td class="detailHeaderType">property</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>protected var _health:Number</code>
+</div>
 <a name="health"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
@@ -440,7 +491,12 @@ showHideInherited();
 </tr>
 </table>
 <div class="detailBody">
-<code>public var health:Number</code>
+<code>health:Number</code>&nbsp;&nbsp;[read-write]<span class="label">Implementation</span>
+<br>
+<code>&nbsp;&nbsp;&nbsp;&nbsp;public function get health():Number</code>
+<br>
+<code>&nbsp;&nbsp;&nbsp;&nbsp;public function set health(value:Number):void</code>
+<br>
 </div>
 <a name="height"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
@@ -577,6 +633,20 @@ showHideInherited();
 </tr>
 </table>
 </div>
+<a name="fromBytes()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">fromBytes</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public override function fromBytes(bytes:ByteArray):void</code><span class="label">Parameters</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20px"></td><td><code><span class="label">bytes</span>:ByteArray</code></td>
+</tr>
+</table>
+</div>
 <a name="getBounds()"></a>
 <table cellspacing="0" cellpadding="0" class="detailHeader">
 <tr>
@@ -654,6 +724,27 @@ showHideInherited();
 <table border="0" cellspacing="0" cellpadding="0">
 <tr>
 <td width="20"></td><td><code>Boolean</code></td>
+</tr>
+</table>
+</div>
+<a name="toBytes()"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">toBytes</td><td class="detailHeaderParens">()</td><td class="detailHeaderType">method</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public override function toBytes(bytes:ByteArray = null):ByteArray</code><span class="label">Parameters</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20px"></td><td><code><span class="label">bytes</span>:ByteArray</code> (default = <code>null</code>)<code></code></td>
+</tr>
+</table>
+<p></p>
+<span class="label">Returns</span>
+<table border="0" cellspacing="0" cellpadding="0">
+<tr>
+<td width="20"></td><td><code>ByteArray</code></td>
 </tr>
 </table>
 </div>
@@ -764,6 +855,15 @@ showHideInherited();
 </table>
 <div class="detailBody">
 <code>public static const ORIENT_TURNING:int</code>
+</div>
+<a name="U_HEALTH"></a>
+<table cellspacing="0" cellpadding="0" class="detailHeader">
+<tr>
+<td class="detailHeaderName">U_HEALTH</td><td class="detailHeaderType">constant</td><td class="detailHeaderRule">&nbsp;</td>
+</tr>
+</table>
+<div class="detailBody">
+<code>public static const U_HEALTH:int</code>
 </div>
 <br>
 <br>
