--- a/pages/code/contrib/asdocs/com/whirled/contrib/platformer/server/ServerController.html
+++ b/pages/code/contrib/asdocs/com/whirled/contrib/platformer/server/ServerController.html
@@ -118,6 +118,14 @@ if (!isEclipse() || window.name != ECLIPSE_FRAME_NAME) {titleBar_setSubTitle("Cl
 <tr class="hideInheritedProtectedMethod">
 <td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol">
 <div class="summarySignature">
+<a class="signatureLink" href="../PlatformerController.html#createMessageManager()">createMessageManager</a>():<a href="../net/MessageManager.html">MessageManager</a>
+</div>
+<div class="summaryTableDescription"></div>
+</td><td class="summaryTableOwnerCol"><a href="../PlatformerController.html">PlatformerController</a></td>
+</tr>
+<tr class="hideInheritedProtectedMethod">
+<td class="summaryTablePaddingCol">&nbsp;</td><td class="summaryTableInheritanceCol"><img class="inheritedSummaryImage" title="Inherited" alt="Inherited" src="../../../../../images/inheritedSummary.gif"></td><td class="summaryTableSignatureCol">
+<div class="summarySignature">
 <a class="signatureLink" href="../PlatformerController.html#createPieceFactory()">createPieceFactory</a>():<a href="../piece/PieceFactory.html">PieceFactory</a>
 </div>
 <div class="summaryTableDescription"></div>
